EKS_main_files/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: voting-app
spec:
  ports:
  - port: 5432
  selector:
    app: db
