EKS_main_files/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: voting-app
spec:
  ports:
  - port: 6379
  selector:
    app: redis
