EKS_main_files/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: voting-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    nodePort: 30002
  selector:
    app: result
