EKS_main_files/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: voting-app
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30001
  selector:
    app: vote
